force-app/main/default/objects/ampi__xx_Story__c/ampi__xx_Story__c.object-meta.xml
<CustomObject>
    <description>This object contains examples of our impact to life outside of indicator results in a narrative format.</description>
    <label>Impact Story</label>
    <nameField>
        <label>Impact Stories Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Impact Stories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>