force-app/main/default/objects/ampi__xx_Story__c/fields/ampi__xx_Project__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Project</description>
    <label>Project</label>
    <referenceTo>ampi__Project__c</referenceTo>
    <relationshipLabel>Related Stories</relationshipLabel>
    <relationshipName>Impact_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>