force-app/main/default/objects/ampi__xx_Story__c/fields/ampi__xx_Published__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Published__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to trigger the process that publishes the Impact Story to the external website.</description>
    <label>Published</label>
    <type>Checkbox</type>
</CustomField>