force-app/main/default/objects/ampi__xx_Story__c/fields/ampi__xx_Reporting_Period__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Reporting_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Reporting Period</description>
    <label>Reporting Period</label>
    <referenceTo>ampi__Reporting_Period__c</referenceTo>
    <relationshipLabel>Related Stories</relationshipLabel>
    <relationshipName>Impact_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>