force-app/main/default/objects/ampi__xx_Story__c/fields/ampi__xx_Story_Narrative__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Story_Narrative__c</fullName>
    <description>This rich text area field is for entering the narrative of a story with text formatting and supporting images/videos.</description>
    <label>Impact Story Narrative</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>