force-app/main/default/objects/ampi__xx_Story__c/fields/ampi__xx_Thematic_Area__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Thematic_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Thematic Area</description>
    <label>Thematic Area</label>
    <referenceTo>ampi__Thematic_Area__c</referenceTo>
    <relationshipLabel>Related Stories</relationshipLabel>
    <relationshipName>Impact_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>