force-app/main/default/objects/ampi__xx_Story__c/listViews/ampi__All.listView-meta.xml
<ListView>
    <fullName>ampi__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>